[gd_scene load_steps=9 format=3 uid="uid://bded4mj88qet4"]

[ext_resource type="Texture2D" uid="uid://dqaopmdo0vdrv" path="res://assets/BackGround/background_layer_1.png" id="1_er8rq"]
[ext_resource type="Script" path="res://menu_scene.gd" id="1_o2wwo"]
[ext_resource type="FontFile" uid="uid://dpy4juslko40f" path="res://assets/Font/Wario Ware Fonts/warioware-inc-mega-microgame-big.ttf" id="3_tb0lo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3k8n1"]
texture = ExtResource("1_er8rq")
modulate_color = Color(1, 1, 1, 0.431373)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0dwkf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3hwp"]
bg_color = Color(0.74978, 0.74978, 0.74978, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.101961)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6feb7"]
bg_color = Color(0.67069, 0.67069, 0.67069, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.101961)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yriaf"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.101961)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="MenuScene" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o2wwo")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -571.0
offset_top = -326.0
offset_right = 580.0
offset_bottom = 321.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_3k8n1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.5
offset_top = -103.5
offset_right = 198.5
offset_bottom = 103.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="Start_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_tb0lo")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_0dwkf")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_o3hwp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6feb7")
theme_override_styles/normal = SubResource("StyleBoxFlat_yriaf")
text = "Start"

[node name="Option_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_tb0lo")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_0dwkf")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_o3hwp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6feb7")
theme_override_styles/normal = SubResource("StyleBoxFlat_yriaf")
text = "Options"

[node name="Exit_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_tb0lo")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_0dwkf")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_o3hwp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6feb7")
theme_override_styles/normal = SubResource("StyleBoxFlat_yriaf")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -420.0
offset_top = -282.0
offset_right = 420.0
offset_bottom = -187.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 7
theme_override_constants/shadow_offset_x = 7
theme_override_constants/shadow_offset_y = 7
theme_override_constants/outline_size = 7
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource("3_tb0lo")
theme_override_font_sizes/font_size = 60
text = "The Illusionist's Journey"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/Start_Button" to="." method="startPressed"]
[connection signal="pressed" from="VBoxContainer/Option_Button" to="." method="optionPressed"]
[connection signal="pressed" from="VBoxContainer/Exit_Button" to="." method="exitPressed"]
